[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "units"
version = "0.0.1"
authors = [
  { name="Ryuto Yoshida"},
]
description = "Utilities for working with physical quantities and unit conversions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/ry-yoshida-private/Units"
"Bug Tracker" = "https://github.com/ry-yoshida-private/Units/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
units = ["py.typed"]
